--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       width: 100%;
       height: 120%;
       background: url("background.png") center 0 no-repeat;
-      background-size: cover;
+      background-size: contain;
       background-color: black;
       z-index: -1;
       transition: filter 1s ease, background-position 0.2s ease-out;
@@ -62,7 +62,7 @@
     p {
       font-size: 1.3rem;
       line-height: 1.8rem;
-      margin-bottom: 8rem;
+      margin-bottom: 4rem;
       white-space: pre-line;
     }
 
