--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5 Impasse Nirvana</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Cormorant Garamond', serif;
+            font-family: 'Work Sans', sans-serif;
             overflow-x: hidden;
             background: #a8ddd0;
         }
@@ -29,7 +29,7 @@
             left: 0;
             width: 100%;
             height: 100vh;
-            background-image: url('background.jpg');
+            background-image: url('background.png');
             background-size: cover;
             background-position: center top;
             transition: opacity 0.5s ease, filter 0.5s ease;
@@ -47,14 +47,15 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding: 40px 20px;
+            padding: 80px 20px 40px;
         }
 
         .text-container {
             text-align: center;
             color: #c94a9c;
             max-width: 800px;
-            margin-bottom: 60px;
+            margin-bottom: 100px;
+            margin-top: 60px;
             opacity: 0;
             animation: fadeIn 2s ease-in forwards;
             animation-delay: 0.5s;
@@ -80,7 +81,7 @@
             font-size: 3em;
             font-weight: 300;
             margin-bottom: 40px;
-            letter-spacing: 2px;
+            letter-spacing: 1px;
         }
 
         .text-container p {
@@ -90,8 +91,7 @@
             margin-bottom: 15px;
         }
 
-        .video-container {
-            position: relative;
+        .video-section {
             width: 90%;
             max-width: 900px;
             opacity: 0;
@@ -99,10 +99,24 @@
             animation-delay: 1s;
         }
 
+        .video-title {
+            text-align: center;
+            color: #c94a9c;
+            font-size: 3.5em;
+            font-weight: 300;
+            margin-bottom: 40px;
+            letter-spacing: 2px;
+        }
+
+        .video-container {
+            position: relative;
+            width: 100%;
+        }
+
         .video-thumbnail {
             position: relative;
             width: 100%;
-            padding-bottom: 56.25%;
+            padding-bottom: 60.24%;
             cursor: pointer;
             border-radius: 8px;
             overflow: hidden;
@@ -167,7 +181,7 @@
 
         .video-player iframe {
             width: 100%;
-            height: 675px;
+            aspect-ratio: 1.66 / 1;
             border: none;
             border-radius: 8px;
         }
@@ -181,6 +195,11 @@
                 font-size: 1.2em;
             }
 
+            .video-title {
+                font-size: 2em;
+                margin-bottom: 30px;
+            }
+
             .play-button {
                 width: 60px;
                 height: 60px;
@@ -190,10 +209,6 @@
                 border-left: 18px solid #c94a9c;
                 border-top: 11px solid transparent;
                 border-bottom: 11px solid transparent;
-            }
-
-            .video-player iframe {
-                height: 50vh;
             }
         }
     </style>
@@ -208,17 +223,20 @@
                 <p>Si vous avez accès à ce site c'est que vous avez contribué</p>
                 <p>à la réalisation de ce court métrage</p>
                 <p>Merci beaucoup, bon visionnage</p>
-                <p><strong>5 Impasse Nirvana.</strong></p>
             </div>
 
-            <div class="video-container">
-                <div class="video-thumbnail" id="thumbnail">
-                    <img src="https://img.youtube.com/vi/8AljwViu68U/maxresdefault.jpg" alt="5 Impasse Nirvana">
-                    <div class="play-button"></div>
-                </div>
+            <div class="video-section">
+                <h2 class="video-title">5 Impasse Nirvana</h2>
                 
-                <div class="video-player" id="videoPlayer">
-                    <iframe id="youtubeIframe" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <div class="video-container">
+                    <div class="video-thumbnail" id="thumbnail">
+                        <img src="https://img.youtube.com/vi/8AljwViu68U/maxresdefault.jpg" alt="5 Impasse Nirvana">
+                        <div class="play-button"></div>
+                    </div>
+                    
+                    <div class="video-player" id="videoPlayer">
+                        <iframe id="youtubeIframe" src="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
